---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v1_: int = const 0;
  v2_: int = const 2;
  v3_: int = const 1;
  v4_: int = const 3;
  v5_: int = id v1_;
  v6_: int = id v0;
  v7_: int = id v2_;
  v8_: int = id v3_;
  v9_: int = id v4_;
  v10_: int = id v1_;
.v11_:
  v12_: bool = eq v6_ v8_;
  br v12_ .v13_ .v14_;
.v13_:
  v15_: bool = const false;
  v16_: int = id v5_;
  v17_: bool = id v15_;
  v18_: int = id v6_;
  v19_: int = id v7_;
  v20_: int = id v8_;
  v21_: int = id v9_;
  v22_: int = id v10_;
.v23_:
  v5_: int = id v16_;
  v6_: int = id v18_;
  v7_: int = id v19_;
  v8_: int = id v20_;
  v9_: int = id v21_;
  v10_: int = id v22_;
  br v17_ .v11_ .v24_;
.v14_:
  v25_: int = div v6_ v7_;
  v26_: int = mul v25_ v7_;
  v27_: int = sub v6_ v26_;
  v28_: bool = eq v10_ v27_;
  v29_: int = add v8_ v5_;
  br v28_ .v30_ .v31_;
.v30_:
  v32_: bool = const true;
  v33_: int = div v6_ v7_;
  v34_: int = id v29_;
  v35_: bool = id v32_;
  v36_: int = id v33_;
  v37_: int = id v7_;
  v38_: int = id v8_;
  v39_: int = id v9_;
  v40_: int = id v10_;
.v41_:
  v16_: int = id v34_;
  v17_: bool = id v35_;
  v18_: int = id v36_;
  v19_: int = id v37_;
  v20_: int = id v38_;
  v21_: int = id v39_;
  v22_: int = id v40_;
  jmp .v23_;
.v31_:
  v42_: bool = const true;
  v43_: int = mul v9_ v6_;
  v44_: int = add v8_ v43_;
  v34_: int = id v29_;
  v35_: bool = id v42_;
  v36_: int = id v44_;
  v37_: int = id v7_;
  v38_: int = id v8_;
  v39_: int = id v9_;
  v40_: int = id v10_;
  jmp .v41_;
.v24_:
  print v5_;
}
